# gba-sprite-engine

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/img/Background/: background240x160V4-20210101-164745.piskel  background240x160v4.c  bgMetWolken MAP.h  bgZonderWolken MAP.h
game/img/Background Gamescene/: Background_256x160_V1.c  background256x160V1-20210111-125229.piskel  background_256x160_V2.c  background_256x160_V2.piskel
game/img/Background Homescene/: 240x160BGV3.c  Background_240x160_V4.c  Background_240x160_V5.c
game/img/Bird/: Flying bird 16px.c  Flying bird 32px.c  Flying bird-20201229-212235 32px.piskel  Flying_bird_16x16.c  Flying_bird_16x16.piskel  Flying_bird_16x16_palette.c  shared 32px.c
game/img/Tube/: TubeCap_32x32.c  TubeCap_32x32.piskel  TubeExtension_32x64.c  TubeExtension_32x64.piskel  shared.c
game/sound/: dead.h  dead.raw  flap.raw  tubePass.raw
game/src/: EndScreenScene.cpp  EndScreenScene.h  GameScreenScene.cpp  GameScreenScene.h  HomeScreenScene.cpp  HomeScreenScene.h  Tube.cpp  Tube.h  main.cpp
game/src/backgrounds/: bgPaletteGameScreen.h  bgPaletteHomeScreen.h  gameScreen.h  homeScreen.h  sharedBgPalette.h
game/src/soundEffects/: deadSound.h  flapSound.h  tubePassSound.h
game/src/sprites/: bird.h  birdSprite.h  chicken.h  sharedPalette.h  tubeSprite.h
